welcome.lessons.welcome.array.arrayfront9.ArrayFront9.scala.error
arrayFront9:6: error: not found: value num
			if (num.length < 3 ) {
                            ^